Polished some bugs re alignment

--- a/google-searchpage.css
+++ b/google-searchpage.css
@@ -98,9 +98,18 @@ li {
     height: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;      
+    justify-content: flex-start;     
 }
-.nav_2 li a {
+.nav_2a {
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    justify-content: space-between;
+    margin-left: 135px;
+    padding-left: 0;
+    width: 440px;   
+}
+.nav_2a a {
     font-size: 13px;
     font-family: Arial, sans-serif;
     color: grey; 
@@ -108,7 +117,7 @@ li {
     padding: 16px;
     margin: 0;
 }
-.nav_2 li a:hover {
+.nav_2a a:hover {
     color: #000;
 }
 #all {
@@ -116,20 +125,23 @@ li {
     font-weight: bold;
     border-bottom: 3px solid #1A73E8;
 }
-.nav_2a {
-    display: flex;
-    flex-direction: row;
-    align-items: center; 
-    justify-content: space-between;
-    padding-left: 135px;
-    width: 35%;   
-}
 .nav_2b {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    justify-content: flex-start;
+    width: 110px;
+    justify-content: space-between;
+    margin-left: 80px;
+}
+.nav_2b a {
+    color: grey;
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    text-decoration: none;
+}
+.nav_2b a:hover {
+    text-decoration: none;
+    color: #000;
 }
 #settings {
     margin-left: 70px;
@@ -322,6 +334,18 @@ h4 {
     margin-left: 150px;
     width: 673px;   
 }
+#drp_dwn1 {
+    margin-left: 264px;
+}
+#drp_dwn2 {
+    margin-left: 318px;
+}
+#drp_dwn3 {
+    margin-left: 383px;
+}
+#drp_dwn4 {
+    margin-left: 330px;
+}
 .ask h2 {
     border-top: 1px solid rgb(223, 225, 229);
     margin: 0;
@@ -346,11 +370,6 @@ h4 {
 }
 .ask a:hover {
     text-decoration: none;
-}
-.ask img {
-    position: absolute;
-    right: 460px;
-    padding-top: 10px;
 }
 .fdbck {
     margin-left: 760px;
@@ -509,7 +528,7 @@ h4 {
     align-items: center;
     padding-left: 155px;
 }
-.footer_links p{
+.footer_links p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
